# open.mp-template

./: .gitmodules  CMakeLists.txt  README.md
gamemode/: CMakeLists.txt  main.cpp  main.hpp
